# rwgle

./: .gitignore  README.md  index.html  package.json  server.js  webpack.config.js
js/: index.js
rust/: Cargo.toml
rust/src/: lib.rs  mesh.rs  model.rs  object.rs  renderer.rs  simple_3d.rs  utils.rs
rust/src/shaders/: 2d_gradient.frag  2d_gradient.vert  simple_3d.frag  simple_3d.vert
static/: cube.gltf  index.html  koob.gltf  style.css
