[package]
authors = ["Kevin Hernandez-Rives <rurunosep@gmail.com>"]
edition = "2018"
name = "rust-webgl"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.5"
js-sys = "0.3.46"
nalgebra-glm = "0.10.0"
wasm-bindgen = "0.2.69"

[dependencies.web-sys]
features = [
  "console",
  "Window",
  "Performance",
  "Document",
  "HtmlElement",
  "HtmlCanvasElement",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlUniformLocation",
]
version = "0.3.46"
