[package]
authors = ["Kevin Hernandez-Rives <rurunosep@gmail.com>"]
edition = "2018"
name = "rust-webgl"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "^0.1.5"
#gltf = "^0.15.2"
js-sys = "^0.3.46"
nalgebra-glm = "^0.10.0"
wasm-bindgen = "^0.2.69"
wee_alloc = "^0.4.5"

[dependencies.web-sys]
features = [
  "console",
  "Window",
  "Performance",
  "HtmlCanvasElement",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlUniformLocation",
  "WebGlActiveInfo",
  "WebGlTexture",
]
version = "^0.3.46"
